<?xml version="1.0"?>
<package>
	<name>autopnp_can_attachments</name>
	<version>0.1.0</version>
	<description>
		Software for adressing can attachments at the Schunk tool changer.
	</description>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
	<url>http://ros.org/wiki/autopnp_can_attachments</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>libpcan</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>diagnostic_updater</build_depend>

	<build_depend>boost</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>libpcan</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>diagnostic_updater</run_depend>

	<run_depend>boost</run_depend>
</package>
