<package>
	<name>autopnp_dirt_detection</name>
	<version>0.1.0</version>
	<description>
		This component is part of the cleaning scenario of the AutoPnP project. It provides an algorithm for dirt detection at the floor and the mapping of dirty areas.
	</description>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/autopnp_dirt_detection</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>libopencv-dev</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>roslib</build_depend>
	<build_depend>rosbag</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>pcl_ros</build_depend>

	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>boost</build_depend>

	<run_depend>cmake_modules</run_depend>
	<run_depend>libopencv-dev</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>roslib</run_depend>
	<run_depend>rosbag</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>pcl_ros</run_depend>

	<run_depend>libpcl-all</run_depend>
	<run_depend>boost</run_depend>

</package>
