<?xml version="1.0"?>
<package>
	<name>autopnp_gui</name>
	<version>0.1.0</version>
	<description>
		Display for running PnP modules.
	</description>
	<author>Joshua Hampp</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
	<url>http://ros.org/wiki/autopnp_gui</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>rospy</build_depend>

	<run_depend>rospy</run_depend>
	<run_depend>cob_script_server</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>cob_srvs</run_depend>

</package>
