<?xml version="1.0"?>
<package>
	<name>autopnp_moveit_config</name>
	<version>0.1.0</version>
	<description>
		MoveIt configuration.
	</description>
	<author>Mathias Lüdtke</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
	<url>http://ros.org/wiki/autopnp_moveit_config</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>moveit_ros_move_group</build_depend>

	<run_depend>moveit_ros_move_group</run_depend>

</package>
